--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-VITE_API_BASE_URL=https://localhost:7203/api
+VITE_API_BASE_URL=http://192.168.11.39:777/api  
+# VITE_API_BASE_URL=http://192.168.106.201:777/api
+# VITE_API_BASE_URL=https://localhost:7203/api
