add pagination api and fix loadign issue

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,6 +1,6 @@
 {
   "appId": "com.example.app",
-  "appName": "washTrack_tusuka",
+  "appName": "WashTrack",
   "webDir": "dist",
   "server": {
     "androidScheme": "http"
