--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/x-data-grid": "^8.17.0",
     "axios": "^1.13.2",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.66.0",
